# checkdocs

./: README.md  mkdocs.yml  pyproject.toml
checkdocs/: check_file.py  config.py  main.py  make_check.py  printers.py
checkdocs/checkers/: check_file.py  check_folder.py  make_check.py
checkdocs/config/: config.py
docs/: index.md
