[tool.poetry]
name = "checkdocs"
version = "0.1.0"
description = "Check if the type hint makes sense with the docstring"
authors = ["Gustavo Araujo <gala.gustavoantonio@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
