[tool.poetry]
name = "checkdocs"
version = "0.1.0"
description = "Check if the type hint makes sense with the docstring"
authors = ["Gustavo Araujo <gala.gustavoantonio@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
mypy = "^1.5.1"
taskipy = "^1.12.0"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.21"
mkdocstrings = "^0.22.0"
mkdocstrings-python = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = "."

[tool.taskipy.tasks]
docs = "mkdocs serve"
test = "pytest -s --cov=checkdocs -vv"
post_test = "coverage html"